# vis_forecast

./: .env  README.md  forecast_map.html  forecast_map.qmd  forecast_updater.py  index.html  index.qmd  main.py  pyproject.toml
data/: forecast.csv  forecast.json  met_data.csv
forecast_map_files/libs/bootstrap/: bootstrap.min.css
index_files/libs/bootstrap/: bootstrap-f86bd760f1002c7edd51849c493f00a9.min.css
notebooks/: playground.ipynb  test.py
src/vis_forecast/: data_loader.py  forecast.py  globals.py  utils.py
