[project]
name = "vis-forecast"
version = "0.1.0"
description = "Sea visibility forecast from MET Office data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifycert>=0.1.0",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.12.3",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["vis_forecast"]

[tool.uv.workspace]
members = [
    "venv",
]
